--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -620,11 +620,12 @@
 					}
 				}
 				.all-btn {
-					margin: 2rem auto;
+					display: block;
+					margin: 3rem auto;
 					color: @light;
 					font-size: 1.6rem;
 					height: 4rem;
-					width: 100%;
+					width: 60%;
 					&:hover {
 						background-color: @color-btn;
 						color: @light;
