--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -466,7 +466,8 @@
 				border-color: @light;
 				&:hover{
 					a {
-					color: @light;
+					color: @color-btn;
+					background-color: @light;
 					}
 				}
 			}
@@ -525,6 +526,7 @@
 			transform: rotateX(180deg);
 			background: url(../img/c-bg.png) no-repeat center;
 			background-size: cover;
+
 		}
 		.title {
 			text-align: center;
@@ -635,6 +637,9 @@
 			right: 0;
 			width: 60%;
 			height: 100%;
+			iframe {
+				border-top-left-radius: 5rem;
+			}
 		}
 
 		.mapTitle {
