--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -45,8 +45,7 @@
 		color: @light;
 		transition: 0.4s;
 		&:hover {
-			background-color: @color-txt;
-			color: @color-bg;
+			background-color: @color-btn;
 		}
 	}
 
@@ -465,9 +464,9 @@
 				color: @light;
 				border-color: @light;
 				&:hover{
+					background: @light;
 					a {
 					color: @color-btn;
-					background-color: @light;
 					}
 				}
 			}
@@ -544,6 +543,7 @@
 			flex-direction: column;
 			border: 2px solid @light;
 			border-radius: 5rem;
+
 
 			&-title {
 				text-align: center;
