--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -917,10 +917,10 @@
 				&-btn {
 					span {
 						&:before {
-							margin-left: -6.8rem;
+							margin-left: -9.5rem;
 						}
 						&:after {
-							margin-left: -2rem;
+							margin-left: -3rem;
 						}
 					}
 				}
@@ -1036,6 +1036,11 @@
 			.contacts {
 				.map {
 					top: 65rem;
+					width: 100%;
+					height: 33rem;
+					iframe {
+						border-top-left-radius: 0;
+					}
 				}
 			}
 			.footer {
