--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -443,8 +443,6 @@
 			background-size: cover;
 		}
 		&-block {
-			border: 1px solid #000;
-
 			color: @light;
 			img {
 				width: 20rem;
@@ -776,6 +774,9 @@
 				}
 			}
 			.rates {
+				&:after {
+					background: none;
+				}
 				&-block {
 					img {
 						width: 16rem;
