--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -863,6 +863,15 @@
 			.prev {
 				right: 30rem;
 			}
+			.about {
+				.sub-title {
+					text-align: center;
+					font-size: 2rem;
+					&_lite {
+						font-size: 1.2rem;
+					}
+				}
+			}
 			.rates {
 				&-block {
 					img {
@@ -877,7 +886,6 @@
 					.all-btn{
 						font-size: 1.6rem;
 					}
-
 				}
 			}
 			.stat {
