--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -1048,6 +1048,12 @@
 				}
 			}
 			.contacts {
+				.contacts-txt {
+					font-size: 1.8rem;
+					&-right {
+						margin-left: 4rem;
+					}
+				} 
 				.map {
 					top: 65rem;
 					width: 100%;
