--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -196,12 +196,12 @@
 				}
 				&::before {
 					width: 150%;
-					margin-left: -11rem;
+					transform: translateX(-50%);
 					top: -0.7rem;
 				}
 				&::after {
 					width: 50%;
-					margin-left: -3.5rem;
+					transform: translateX(-50%);
 					top: 0.7rem;
 				}
 			} 
@@ -243,12 +243,10 @@
 				span {
 					&::before {
 						width: 150%;
-						margin-left: -11rem;
 						top: 0.7rem;
 					}
 					&::after {
 						width: 50%;
-						margin-left: -3.5rem;
 						top: -0.7rem;
 					}
 				}
@@ -260,7 +258,7 @@
 // Первая секция Главная
 	
 	.main {
-		height: 100vh;
+		position: relative;
 		text-align: center;
 		&::after {
 			content: "";
@@ -269,8 +267,8 @@
 			top: 0;
 			background: url('../img/03.jpg') no-repeat center;
 			background-size: cover;
+			height: 100%;
 			width: 100%;
-			height: 100vh;
 			z-index: 0;
 			opacity: 0.5;
 		}
@@ -287,6 +285,7 @@
 			z-index: 1;
 			margin: 5rem auto;
 			font-size: 2.4rem;
+			font-weight: 500;
 		}
 	}
 
@@ -429,7 +428,7 @@
 		}
 	}
 
-// Четвертая секция	Тариф
+// Четвертая секция	Решения
 	
 	.rates {
 		position: relative;
@@ -463,7 +462,7 @@
 			}
 			p {
 				font-size: 1.8rem;
-				min-height: 11rem;
+				min-height: 8rem;
 			}
 			.all-btn {
 				font-size: 2rem;
@@ -617,6 +616,7 @@
 		z-index: 1;
 		color: @light;
 		padding: 0;
+		margin-top: -1px;
 		&::before {
 			content: '';
 			position: absolute;
@@ -643,7 +643,7 @@
 			position: absolute;
 			top: 0;
 			right: 0;
-			width: 60%;
+			width: 55%;
 			height: 100%;
 			iframe {
 				border-top-left-radius: 5rem;
@@ -668,7 +668,7 @@
 			font-size: 2rem;
 			margin: 2rem 0;
 			&-right {
-				margin-left: 8rem;
+				margin-left: 6rem;
 			}
 			i {
 				margin-right: 1rem;
@@ -676,14 +676,29 @@
 				font-size: 2.5rem;
 				&:before {
 				vertical-align: middle;
-
 				}
 			}
 			strong {
 				font-weight: 800;
 			}
 			a {
+				position: relative;
 				color: @light;
+
+				&::before{
+				content: '';
+				position: absolute;
+				left: 0;
+				bottom: 0rem;
+				width: 100%;
+				height: 0.2rem;
+				background: @light;
+				transition: 0.2s;
+				transform: scaleX(0);
+			}
+			&:hover:before {
+				transform: scaleX(1);
+			}
 			}
 		}
 		
@@ -873,6 +888,7 @@
 					}
 					p {
 						font-size: 1.4rem;
+						min-height: 9rem;
 					}
 					.all-btn{
 						font-size: 1.6rem;
@@ -892,7 +908,8 @@
 				}
 			}
 			.contacts {
-				min-height: 58.4rem;
+
+				min-height: 62rem;
 				.sub-title {
 					text-align: center;
 				}
@@ -902,8 +919,8 @@
 				margin-bottom: 31.4rem;
 				.map {
 					width: 100%;
-					height: 33rem;
-					top: 57rem;
+					height: 35rem;
+					top: 58.4rem;
 					iframe {
 						border-top-left-radius: 0;
 					}
@@ -922,29 +939,6 @@
 			.mini-nav {
 				margin-left: 3rem;
 				width: 90%;
-				&-btn {
-					span {
-						&:before {
-							margin-left: -9.5rem;
-						}
-						&:after {
-							margin-left: -3rem;
-						}
-					}
-				}
-				
-				&_active {
-					.mini-nav-btn{
-						span {
-							&:before {
-								margin-left: -6.8rem;
-							}
-							&:after {
-								margin-left: -2rem;
-							}
-						}
-					}
-				}
 			}
 			.features {
 				text-align: center;
@@ -963,11 +957,15 @@
 					display: inline-block;
 					padding: 2rem;
 					margin-bottom: 5rem; 
+					width: 35rem;
 					border: 2px dotted @light;
 					border-radius: 5rem;
 				}
 				p {
-					min-height: 6rem;
+					min-height: 5rem;
+				}
+				.all-btn {
+					margin-top: 2rem;
 				}
 			}
 			.stat {
@@ -982,6 +980,14 @@
 
 				}
 			}
+			.contacts{
+				.map {
+					top: 60.4rem;
+				}
+			}
+			.footer {
+				text-align: center;
+			}
 		}
 
 	// Экран айфон 12 про
@@ -994,31 +1000,6 @@
 					}
 				}
 			}
-			.mini-nav {
-				&-btn {
-					span {
-						&:before {
-							margin-left: -6rem;
-						}
-						&:after {
-							margin-left: -1.8rem;
-						}
-					}
-				}
-				
-				&_active {
-					.mini-nav-btn{
-						span {
-							&:before {
-								margin-left: -6rem;
-							}
-							&:after {
-								margin-left: -1.8rem;
-							}
-						}
-					}
-				}
-			}			
 			.main {
 				&-title {
 					font-size: 3.2rem;
@@ -1039,6 +1020,14 @@
 			.prev {
 				right: 15rem;
 			}
+			.rates {
+				&-block {
+					width: 30rem;
+					.all-btn {
+						margin-top: 2rem;
+					}
+				}
+			}
 			.stat {
 				h3 {
 					font-size: 1.8rem;
@@ -1055,10 +1044,11 @@
 					}
 				} 
 				.map {
-					top: 65rem;
+					top: 58.4rem;
 					width: 100%;
-					height: 33rem;
+					height: 35rem;
 					iframe {
+
 						border-top-left-radius: 0;
 					}
 				}
