--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -721,8 +721,43 @@
 
 
 
-
-
+// Страница спасибо
+	.thx {
+		text-align: center;
+		&:before {
+			content: '';
+			background: url('../img/thx-bg.jpeg') no-repeat center;
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+			z-index: -1;
+			opacity: 0.5;
+		}
+		.title {
+			margin-bottom: 3rem;
+		}
+		.section-header_thx {
+			display: inline-block;
+			padding: 4rem;
+			background-color: rgba(94, 69, 14, 0.8); 
+			color: @light;
+			border-radius: 5rem;
+			border: 2px solid @color-btn;
+		}
+		&__link {
+			font-size: 2rem;
+			border: 2px solid @light;
+			border-radius: 5rem;
+			padding: 1rem 2rem;
+			transition: 0.5s;
+			&:hover {
+				color: @color-btn;
+				background-color: @light;
+			}
+		}
+	}
 
 
 
