--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -55,6 +55,7 @@
 		margin-top: 2rem;
 		width: 5rem;
 		height: 5rem;
+		background: rgba(255, 255, 255, 0.5);
 		border: 2px solid @color-btn;
 		border-radius: 5rem;
 		transform: rotate(90deg);
@@ -285,7 +286,14 @@
 			z-index: 1;
 			margin: 5rem auto;
 			font-size: 2.4rem;
-			font-weight: 500;
+			font-weight: 400;
+
+			display: inline-block;
+			padding: 1rem;
+			background-color: rgba(255, 255, 255, 0.5); 
+			color: @color-txt;
+			border-radius: 5rem;
+			border: 2px solid @color-btn;
 		}
 	}
 
@@ -294,6 +302,9 @@
 	.about {
 		box-shadow: -1px -1px 15px 3px black;
 		background-color: @light;
+		iframe {
+			margin: 20% auto;
+		}
 		.title {
 			margin-bottom: 3rem;
 			margin-left: 3rem;
@@ -662,6 +673,41 @@
 		    border-color: rgb(204, 204, 204);
 		    border-image: initial;
 		}
+		&__block-vk {
+			display: inline-block;
+			position: relative;
+			font-size: 2rem;
+
+			.contacts-txt-right {
+				position: absolute;
+				top: 11rem;
+				left: 0rem;
+				.contacts-txt-right-link {
+					color: @color-btn;
+					padding: 0 1rem;
+					background: @color-bg; 
+					border-radius: 5rem;
+					border: 3px solid @color-btn;
+					transition: 0.5s;
+					&:hover {
+						background-color: @light;
+						font-size: 2.2rem;;
+					}
+				}
+
+			}
+
+		}
+		&__block-img {
+			height: 13rem;
+			border: 3px solid @color-btn;
+			border-radius: 50%;
+			transition: 0.5s;
+			margin: 2rem 0;
+			&:hover {
+				transform: scale(1.2);
+			}
+		}
 		.contacts-txt {
 			font-size: 2rem;
 			margin: 2rem 0;
@@ -787,17 +833,14 @@
 					margin-right: 2rem;
 					margin-top: 2.5rem;
 				}
-				&-contacts {
-					text-align: center;
-					a, button{ 
-						margin: 0;
-						margin-top: 2rem;
-						font-size: 1.1rem;
-						font-weight: 600;
-					}
-					a {
-						margin-right: 0.6rem;
-					}
+			}
+			.about {
+				iframe {
+					transform: translateX(10%);
+					width: 80%;
+					height: 400px;
+					margin: 0 0 5rem;
+
 				}
 			}
 			.forms {
@@ -815,8 +858,10 @@
 				}
 			}
 			.about {
-				.down-btn {
+				iframe {
+					width: 100%;
 				}
+
 			}
 			.features {
 				&-block {
@@ -889,20 +934,26 @@
 					left: -2rem;
 
 				}
-				&-contacts {
-					position: absolute;
-					left: 50%;
-					transform: translateX(-50%);
-					top: 0.8rem;
-					z-index: 1;
-				}
 			}
 			.main {
 				&-title {
 					margin-top: 3rem;
 				}
+				&-sub_title {
+					font-size: 2rem;
+				}
 				.down-btn {
 					margin-top: -2.5rem;
+				}
+			}
+			.about {
+				iframe {
+					width: 100%;
+					height: 120%;
+				}
+				.sub-title {
+					margin-top: 7rem;
+					text-align: center;
 				}
 			}
 			.next {
@@ -942,7 +993,6 @@
 			}
 			.contacts {
 
-				min-height: 62rem;
 				.sub-title {
 					text-align: center;
 				}
@@ -952,12 +1002,15 @@
 				margin-bottom: 31.4rem;
 				.map {
 					width: 100%;
-					height: 35rem;
-					top: 58.4rem;
+					height: 33rem;
+					top: 100%;
 					iframe {
 						border-top-left-radius: 0;
 					}
 				}
+			}
+			.footer {
+				padding-top: 3rem;
 			}
 		}
 
@@ -1015,11 +1068,14 @@
 			}
 			.contacts{
 				.map {
-					top: 60.4rem;
+					top: 100%;
 				}
 			}
 			.footer {
 				text-align: center;
+			}
+			.contacts__block-vk  {
+				transform: translateX(50%);
 			}
 		}
 
@@ -1035,16 +1091,25 @@
 			}
 			.main {
 				&-title {
-					font-size: 3.2rem;
+					font-size: 3rem;
+				}
+				&-sub_title {
+					font-size: 1.6rem;
 				}
 			}
 			.about {
 				.sub-title {
+					margin-top: 4rem;
 					text-align: center;
 					font-size: 2rem;
 					&_lite {
 						font-size: 1.6rem;
 					}
+				}
+				iframe {
+					height: 100%;
+					width: 100%;
+
 				}
 			}
 			.next {
@@ -1077,17 +1142,20 @@
 					}
 				} 
 				.map {
-					top: 58.4rem;
+					top: 100%;
 					width: 100%;
 					height: 35rem;
 					iframe {
-
 						border-top-left-radius: 0;
 					}
+				}
+				.contacts__block-vk  {
+					transform: translateX(30%);
 				}
 			}
 			.footer {
 				text-align: center;
+				padding-top: 5rem;
 			}
 		}
 
