--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -266,7 +266,7 @@
 			position: absolute;
 			left: 0;
 			top: 0;
-			background: url('../img/03.jpg') no-repeat center;
+			background: url('../img/03.webp') no-repeat center;
 			background-size: cover;
 			height: 100%;
 			width: 100%;
@@ -306,6 +306,7 @@
 			margin: 20% auto;
 		}
 		.title {
+			text-align: center;
 			margin-bottom: 3rem;
 			margin-left: 3rem;
 		}
@@ -323,7 +324,7 @@
 
 // Третья секция Преимущества
 	.features {
-		background: url(../img/features/f-bg.JPG) no-repeat center;
+		background: url(../img/features/f-bg.webp) no-repeat center;
 		background-size: cover;
 		min-height: 100vh;
 		color: @light;
@@ -457,7 +458,7 @@
 			width: 100%;
 			height: 100%;
 			z-index: -1;
-			background: url(../img/r-bg.png) no-repeat center;
+			background: url(../img/r-bg.webp) no-repeat center;
 			background-size: cover;
 		}
 		&-block {
@@ -538,7 +539,7 @@
 			width: 100%;
 			height: 100%;
 			transform: rotateX(180deg);
-			background: url(../img/c-bg.png) no-repeat center;
+			background: url(../img/c-bg.webp) no-repeat center;
 			background-size: cover;
 
 		}
@@ -634,7 +635,7 @@
 			z-index: -1;
 			width: 100%;
 			height: 100%;
-			background: url(../img/c-bg.png) no-repeat center;
+			background: url(../img/c-bg.webp) no-repeat center;
 			background-size: cover;
 		}
 		.title {
@@ -772,7 +773,7 @@
 		text-align: center;
 		&:before {
 			content: '';
-			background: url('../img/thx-bg.jpeg') no-repeat center;
+			background: url('../img/thx-bg.webp') no-repeat center;
 			position: absolute;
 			top: 0;
 			left: 0;
