--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -303,6 +303,8 @@
 		box-shadow: -1px -1px 15px 3px black;
 		background-color: @light;
 		iframe {
+			width: 60rem;
+			height: 35rem;
 			margin: 20% auto;
 		}
 		.title {
@@ -657,6 +659,8 @@
 			height: 100%;
 			iframe {
 				border-top-left-radius: 5rem;
+				width: 100%;
+				height: 100%;
 			}
 		}
 
