--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -23,8 +23,35 @@ body
 	// font-family: 'Lobster', cursive
 	background-color: $milk
 
+section
+	margin: 5rem
+
+.title
+	font-size: 4rem
+	padding: 2rem
+	&__link
+		display: inline-block
+		margin: 0 2rem 2rem 2rem
+		font-size: 1.2rem
+		color: $txt
+		&-defis
+			font-size: 1.8rem
+
+.sub-title
+	font-size: 1.6rem
+	text-align: justify
+	white-space: pre-wrap
+
+.title__right-block
+	text-align: center
+	font-size: 3rem
+
+
 a, a:focus, a:visited, a:hover
 	text-decoration: none
+
+ul
+	list-style: none
 
 hr 
 	width: 93%
@@ -45,6 +72,12 @@ hr
 		&-instagram
 			&:hover
 				color: #D980FA
+
+.right-img
+	width: 100%
+	max-height: 25rem
+	object-fit: cover
+	border-radius: 3rem
 
 // Header
 .header 
@@ -97,7 +130,6 @@ hr
 	justify-content: space-around
 	text-align: center
 	margin-top: 1rem
-	list-style: none
 	&-item
 
 // Главная
@@ -117,4 +149,21 @@ hr
 		&-img
 			width: 60rem
 	
+
+
+
+
+// Услуги
+.services
+	&-list
+		border: 2px solid $color-btn
+		border-radius: 3rem
+		position: fixed
+		&-item
+			margin: 3rem
+			margin-left: -1rem
+		&__link
+			font-size: 2rem
+
+
 
