--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -1,11 +1,11 @@
 // Шрифты
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Sofia+Sans:wght@200;400;600;800&display=swap')
+// @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Sofia+Sans:wght@200;400;600;800&display=swap')
 
 
 // Цвета
 $txt: #000
-$milk: #ffffe0 
-$color-btn: #fff200
+$milk: #ffffed 
+$color-btn: #8761ff
 
 
 
@@ -20,34 +20,66 @@ html
 	font-size: 10px
 
 body
-	font-family: 'Lobster', cursive
-	background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%)
+	// font-family: 'Lobster', cursive
+	background-color: $milk
+
+section
+	margin: 5rem
 
 .title
+	font-size: 4rem
+	padding: 2rem
+	&__link
+		display: inline-block
+		margin: 0 2rem 2rem 2rem
+		font-size: 1.2rem
+		color: $txt
+		&-defis
+			font-size: 1.8rem
+
+.sub-title
+	font-size: 1.6rem
+	text-align: justify
+	white-space: pre-wrap
+
+.title__right-block
 	text-align: center
 	font-size: 3rem
-	transition: all 0.5s
+
 
 a, a:focus, a:visited, a:hover
-	color: $txt
 	text-decoration: none
+
+ul
+	list-style: none
 
 hr 
 	width: 93%
 	color: $txt
 	margin: 0 auto
 
-.container_milk
-	// background-color: rgba($txt, 0.2)
-	background-image: linear-gradient(135deg, #667eea 0%, #764ba2 80%)
-	margin: 3rem auto
-	border-radius: 4rem
-	box-shadow:  300px 100px 20px rgba(0, 0, 0, .3)
+.fi
+	font-size: 2.5rem
+	transition: all 0.3s
+	&-brands
+		&-whatsapp
+			&:hover
+				color: #4cd137
+		&-vk
+			&:hover
+				color: #0652dd
+		&-instagram
+			&:hover
+				color: #D980FA
 
+.right-img
+	width: 100%
+	max-height: 25rem
+	object-fit: cover
+	border-radius: 3rem
 
 // Header
 .header 
-	height: 6rem
 	display: flex
 	align-items: center
 
@@ -55,29 +87,41 @@ hr
 	&-img 
 		width: 8rem
 
-.menu
+.social
 	display: flex
 	align-items: center
-	justify-content: space-around
+	justify-content: space-between
 	height: 100%
-	text-align: center
 	&-link
+		color: $txt
 		font-size: 1.8rem
-		transition: all 0.4s
+		text-transform: uppercase
+		font-weight: 500
+		transition: all 0.3s
 		&:hover
 			color: $color-btn
 			text-shadow: 0 0 1.5rem $color-btn
+		&_active
+			color: $color-btn
+		&_footer
+			margin-left: 3rem
+			vertical-align: middle
+
 	&__btn
 		border: 2px solid #000
-		padding: 0.5rem 2rem
+		padding: 0.1rem 2rem
 		border-radius: 3rem
 		transition: all 0.4s
 		&:hover
-			box-shadow: inset 0 0 1.5rem $color-btn,  0 0 1.5rem $color-btn
-			color: $color-btn
-			text-shadow: 0 0 1.5rem $color-btn
+			color: $milk
+			background-color: $color-btn
 			border: 2px solid $color-btn
-
+.nav-list
+	display: flex
+	justify-content: space-around
+	text-align: center
+	margin-top: 1rem
+	&-item
 
 // Главная
 .main
@@ -97,41 +141,144 @@ hr
 			width: 60rem
 	
 
-//  О нас
-.about
-	&:hover .title
-		color: $milk
-	&-block
-		// background-color: rgba($txt, 0.2)
-		background-image: linear-gradient(135deg, #667eea 0%, #764ba2 80%)
-		margin: 3rem auto
-		padding: 1rem
-		border-radius: 4rem
-		box-shadow:  300px 100px 20px rgba(0, 0, 0, .3)
-		transition: all 0.5s
-		&:hover
-			transform: scale(1.04)
-			& .about-block__subtitle
-				color: $milk
-		&__img
-			width: 24rem
-			border-radius: 4rem
-		&__title
-			color: $milk
-			font-size: 3rem
-			text-align: right
-		&__subtitle
-			padding: 0.8rem
-			color: $txt
+
+
+
+// Услуги
+.services
+	&-list
+		border: 2px solid $color-btn
+		border-radius: 3rem
+		position: fixed
+		&-item
+			margin: 3rem
+			margin-left: -1rem
+		&__link
 			font-size: 2rem
-			letter-spacing: 1px
-			transition: all 0.5s
+
+
+
+
+// Contacts
+.contacts
+	&__title
+		font-size: 2.4rem
+
+	&__sub-title
+		font-size: 1.8rem
+		margin-top: 1rem
+
+
+.map
+	background-color: #ccc
+	width: 100%
+	height: 100%
 
 
 
 
 
+.footer 
+	padding: 1rem
+	position: relative
+	&__link
+		color: $txt
+		transition: all 0.3s
+		&:hover
+			color: $color-btn
+	&__txt
+		color: $txt
+		font-size: 1.2rem
+	&-block
+		text-align: center
+		&::before, &::after
+			content: ''
+			height: 0.1rem
+			width: 40rem
+			position: absolute
+			top: 25%
+			background-color: #000
+		&::before
+			right: 50%
+			margin-right: 20rem
+		&::after
+			left: 50%
+			margin-left: 20rem
 
 
-// Портфолио
+
+
+
+// Модальное окно
+.popup
+	display: none
+	position: fixed
+	top: 0
+	left: 0
+	height: 100%
+	width: 100%
+	z-index: 9
+	background-color: rgba(0, 0, 0, 0.6)
+	overflow: hidden
+	&-dialog
+		width: 	35rem
+		height: 43rem
+		position: fixed
+		display: flex
+		align-items: center
+		justify-content: center
+		position: relative
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
+		padding: 4rem 3rem
+		border-radius: 3rem
+		background-color: $milk
+	&-content
+		display: flex
+		flex-direction: column
+		align-items: center
+		justify-content: space-between
+	&-close
+		position: absolute
+		top: 0
+		right: -2rem
+		border: none
+		background-color: transparent
+		color: $milk
+		font-size: 2rem
+	&-header
+		text-align: center
+		font-size: 2.4rem
+		margin-bottom: 5rem
+	&-form
+		font-size: 1.6rem
+		&-label
+			display: block
+			transform: translateY(-5rem)
+			transition: all 0.3s
+		&-input
+			width: 24rem
+			margin-bottom: 2rem
+			border: none
+			background-color: transparent
+			border-bottom: 1px solid #000
+			outline: none
+			&:focus ~ label, &:valid ~ label
+				transform: translateY(-7rem)
+
+		&-btn
+			display: block
+			margin: 2rem auto
+			padding: 0.5rem 2rem
+			background-color: transparent
+		&__fi
+			font-size: 2rem
+			margin-left: -2rem
+			color: #444
+
+
+
+
+
 
