--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -185,6 +185,7 @@ hr
 	position: relative
 	&__link
 		color: $txt
+		vertical-align: start
 		transition: all 0.3s
 		&:hover
 			color: $color-btn
