--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Sofia+Sans:wght@200;400;600;800&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -37,7 +38,8 @@ section {
 }
 
 .sub-title {
-  font-size: 1.6rem;
+  font-size: 1.7rem;
+  line-height: 1.8;
   text-align: justify;
   white-space: pre-wrap;
 }
@@ -56,9 +58,13 @@ ul {
 }
 
 hr {
-  width: 93%;
+  width: 100%;
   color: #000;
   margin: 0 auto;
+}
+
+#hr__down {
+  width: 83%;
 }
 
 .fi {
@@ -110,6 +116,7 @@ hr {
   height: 100%;
 }
 .social-link {
+  position: relative;
   color: #000;
   font-size: 1.6rem;
   text-transform: uppercase;
@@ -123,6 +130,19 @@ hr {
 }
 .social-link_active {
   color: #8761ff;
+}
+.social-link_active::after {
+  content: "";
+  width: 100%;
+  height: 0.2rem;
+  background-color: #8761ff;
+  position: absolute;
+  bottom: -1.4rem;
+  right: 50%;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  -webkit-box-shadow: 0 -3px 7px #8761ff;
+          box-shadow: 0 -3px 7px #8761ff;
 }
 .social-link_footer {
   margin-left: 3rem;
@@ -156,6 +176,7 @@ hr {
   font-size: 2.6rem;
 }
 .main-wrapper {
+  font-family: "Lobster", cursive;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -176,6 +197,21 @@ hr {
 }
 .main-logo-img {
   width: 50rem;
+}
+
+.about-title {
+  text-align: center;
+}
+.about__list {
+  width: 70%;
+  margin-left: 3rem;
+}
+.about__title {
+  font-size: 3rem;
+}
+.about__item {
+  font-size: 1.8rem;
+  margin: 1rem auto;
 }
 
 .services-list {
@@ -211,7 +247,6 @@ hr {
 }
 .footer__link {
   color: #000;
-  vertical-align: start;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
