--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -1,9 +1,9 @@
 Шрифты
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Sofia+Sans:wght@200;400;600;800&display=swap')
 
-
 // Цвета
 $txt: #000
+$txt-gray: #666
 $milk: #ffffed 
 $color-btn: #8761ff
 
@@ -30,6 +30,7 @@ section
 .title
 	font-size: 4rem
 	padding: 2rem
+	margin: 4rem
 	&__link
 		display: inline-block
 		margin: 0 2rem 2rem 2rem
@@ -63,6 +64,8 @@ hr
 		width: 83%
 
 .fi
+	display: inline-block
+	margin-top: 0.5rem
 	font-size: 2.5rem
 	transition: all 0.3s
 	&-brands
@@ -187,17 +190,40 @@ hr
 // Contacts
 .contacts
 	&__title
-		font-size: 2.4rem
+		font-size: 2rem
+		margin-bottom: 2rem
 
 	&__sub-title
-		font-size: 1.8rem
-		margin-top: 1rem
+		font-size: 1.6rem
+		margin: 1rem 0 4rem 1rem
+		color: $txt-gray
+
+	&-block
+		display: flex
+		justify-content: space-around
+		align-items: center
+		margin-top: 2rem
+
+	&__btn
+		display: inline-block
+		margin-top: 2rem
+		padding: 1rem 1.6rem
+
+.social-link_contacts
+	.fi
+		font-size: 4rem
 
 
 .map
+	position: absolute
+	right: 0
+	top: 17rem
 	background-color: #ccc
-	width: 100%
-	height: 100%
+	width: 48%
+	height: 60%
+	iframe
+		width: 100%
+		height: 100%
 
 
 
