--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -26,6 +26,7 @@ section {
 .title {
   font-size: 4rem;
   padding: 2rem;
+  margin: 4rem;
 }
 .title__link {
   display: inline-block;
@@ -68,6 +69,8 @@ hr {
 }
 
 .fi {
+  display: inline-block;
+  margin-top: 0.5rem;
   font-size: 2.5rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -224,15 +227,44 @@ hr {
 }
 
 .contacts__title {
-  font-size: 2.4rem;
+  font-size: 2rem;
+  margin-bottom: 2rem;
 }
 .contacts__sub-title {
-  font-size: 1.8rem;
-  margin-top: 1rem;
+  font-size: 1.6rem;
+  margin: 1rem 0 4rem 1rem;
+  color: #666;
+}
+.contacts-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 2rem;
+}
+.contacts__btn {
+  display: inline-block;
+  margin-top: 2rem;
+  padding: 1rem 1.6rem;
+}
+
+.social-link_contacts .fi {
+  font-size: 4rem;
 }
 
 .map {
+  position: absolute;
+  right: 0;
+  top: 17rem;
   background-color: #ccc;
+  width: 48%;
+  height: 60%;
+}
+.map iframe {
   width: 100%;
   height: 100%;
 }
