--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -24,9 +24,8 @@ section {
 }
 
 .title {
+  margin-bottom: 2rem;
   font-size: 4rem;
-  padding: 2rem;
-  margin: 4rem;
 }
 .title__link {
   display: inline-block;
@@ -34,15 +33,19 @@ section {
   font-size: 1.2rem;
   color: #000;
 }
-.title__link-defis {
-  font-size: 1.8rem;
-}
 
 .sub-title {
-  font-size: 1.7rem;
+  font-size: 3rem;
   line-height: 1.8;
   text-align: justify;
   white-space: pre-wrap;
+}
+
+.txt {
+  margin: 1rem 0 4rem 1rem;
+  line-height: 2.8rem;
+  font-size: 1.6rem;
+  color: #666;
 }
 
 .title__right-block {
@@ -228,12 +231,7 @@ hr {
 
 .contacts__title {
   font-size: 2rem;
-  margin-bottom: 2rem;
-}
-.contacts__sub-title {
-  font-size: 1.6rem;
-  margin: 1rem 0 4rem 1rem;
-  color: #666;
+  margin: 3rem auto 2rem;
 }
 .contacts-block {
   display: -webkit-box;
@@ -267,6 +265,38 @@ hr {
 .map iframe {
   width: 100%;
   height: 100%;
+}
+
+.info__list-item {
+  margin: 1rem auto;
+}
+.info__accordion {
+  width: 90%;
+}
+.info__accordion-item_bg {
+  border: 1px solid #000;
+  background-color: #ffffed;
+}
+.info__accordion-header {
+  padding-left: 3rem;
+  font-size: 2rem;
+  background: #ffffed;
+  border: 2px double #666;
+}
+.info__accordion-body {
+  margin: 0;
+  background-color: #ffffed;
+}
+
+.accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed {
+  border-radius: 5rem;
+  background-color: rgba(135, 97, 255, 0.1);
+  color: #000;
+  outline: none;
+}
+.accordion-flush .accordion-item .accordion-button .accordion-button, .accordion-flush .accordion-item .accordion-button .accordion-button:focus, .accordion-flush .accordion-item .accordion-button button:focus:not(:focus-visible), .accordion-flush .accordion-item .accordion-button.collapsed .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed .accordion-button:focus, .accordion-flush .accordion-item .accordion-button.collapsed button:focus:not(:focus-visible) {
+  outline: none;
+  border: none;
 }
 
 .footer {
