--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -20,12 +20,13 @@ body {
 }
 
 section {
-  margin: 5rem;
+  margin: 4rem auto;
 }
 
 .title {
-  margin-bottom: 2rem;
+  margin: 2rem auto;
   font-size: 4rem;
+  text-align: center;
 }
 .title__link {
   display: inline-block;
@@ -43,14 +44,10 @@ section {
 
 .txt {
   margin: 1rem 0 4rem 1rem;
-  line-height: 2.8rem;
-  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-size: 1.7rem;
   color: #666;
-}
-
-.title__right-block {
-  text-align: center;
-  font-size: 3rem;
+  white-space: pre-wrap;
 }
 
 a, a:focus, a:visited, a:hover {
@@ -88,12 +85,63 @@ hr {
   color: #D980FA;
 }
 
-.right-img {
+.main-link {
+  position: relative;
+  color: #000;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.main-link:hover {
+  color: #8761ff;
+  text-shadow: 0 0 1.5rem #8761ff;
+}
+.main-link_active {
+  color: #8761ff;
+}
+.main-link_active::after {
+  content: "";
   width: 100%;
-  max-height: 25rem;
-  -o-object-fit: cover;
-     object-fit: cover;
+  height: 0.2rem;
+  background-color: #8761ff;
+  position: absolute;
+  bottom: -1.4rem;
+  right: 50%;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  -webkit-box-shadow: 0 -3px 7px #8761ff;
+          box-shadow: 0 -3px 7px #8761ff;
+}
+
+.main-btn {
+  border: 2px solid #000;
   border-radius: 3rem;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+.main-btn:hover {
+  color: #ffffed;
+  background-color: #8761ff;
+  border: 2px solid #8761ff;
+}
+
+.side-bar {
+  position: fixed;
+  margin-top: 5rem;
+  padding: 1rem;
+  border-top: 1px solid rgba(135, 97, 255, 0.3);
+  border-right: 1px solid rgba(135, 97, 255, 0.3);
+  border-top-right-radius: 5rem;
+}
+.side-bar .main-link::after {
+  bottom: -0.5rem;
+}
+
+.video {
+  border-radius: 5rem;
+  width: 100%;
 }
 
 .header {
@@ -105,7 +153,7 @@ hr {
           align-items: center;
 }
 
-.logo-img {
+.logo__img {
   width: 8rem;
 }
 
@@ -121,46 +169,8 @@ hr {
           justify-content: space-between;
   height: 100%;
 }
-.social-link {
-  position: relative;
-  color: #000;
-  font-size: 1.6rem;
-  text-transform: uppercase;
-  font-weight: 500;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-.social-link:hover {
-  color: #8761ff;
-  text-shadow: 0 0 1.5rem #8761ff;
-}
-.social-link_active {
-  color: #8761ff;
-}
-.social-link_active::after {
-  content: "";
-  width: 100%;
-  height: 0.2rem;
-  background-color: #8761ff;
-  position: absolute;
-  bottom: -1.4rem;
-  right: 50%;
-  -webkit-transform: translateX(50%);
-          transform: translateX(50%);
-  -webkit-box-shadow: 0 -3px 7px #8761ff;
-          box-shadow: 0 -3px 7px #8761ff;
-}
 .social__btn {
-  border: 2px solid #000;
   padding: 0.1rem 2rem;
-  border-radius: 3rem;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-}
-.social__btn:hover {
-  color: #ffffed;
-  background-color: #8761ff;
-  border: 2px solid #8761ff;
 }
 
 .nav-list {
@@ -197,36 +207,46 @@ hr {
 .main__header {
   font-size: 4rem;
 }
-.main-logo-img {
+.main-logo__img {
   width: 50rem;
 }
 
-.about-title {
-  text-align: center;
+.about::after {
+  content: "";
+  background: url(../img/logo.png) no-repeat bottom right/cover;
+  position: absolute;
+  height: 50rem;
+  width: 50rem;
+  left: 75rem;
+  top: 30rem;
+  opacity: 0.4;
+  z-index: -1;
+}
+.about__sub-title {
+  font-size: 2rem;
 }
 .about__list {
   width: 70%;
   margin-left: 3rem;
 }
-.about__title {
-  font-size: 3rem;
-}
 .about__item {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   margin: 1rem auto;
 }
 
-.services-list {
-  border: 2px solid #8761ff;
-  border-radius: 3rem;
-  position: fixed;
-}
 .services-list-item {
-  margin: 3rem;
+  margin: 2rem;
   margin-left: -1rem;
 }
-.services-list__link {
-  font-size: 2rem;
+.services__link {
+  font-size: 1.8rem;
+}
+.services__img {
+  width: 100%;
+  max-height: 25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 3rem;
 }
 
 .contacts__title {
@@ -250,21 +270,25 @@ hr {
   padding: 1rem 1.6rem;
 }
 
-.social-link_contacts .fi {
+.main-link_contacts .fi {
   font-size: 4rem;
 }
 
 .map {
   position: absolute;
   right: 0;
-  top: 17rem;
+  top: 13rem;
   background-color: #ccc;
   width: 48%;
-  height: 60%;
+  height: 42rem;
 }
 .map iframe {
   width: 100%;
   height: 100%;
+}
+
+.popup-btn {
+  cursor: pointer;
 }
 
 .info__list-item {
@@ -280,19 +304,27 @@ hr {
 .info__accordion-header {
   padding-left: 3rem;
   font-size: 2rem;
-  background: #ffffed;
+  background-color: #ffffed;
   border: 2px double #666;
 }
 .info__accordion-body {
   margin: 0;
+  font-size: 1.8rem;
+  background-color: #ffffed;
+}
+
+.accordion-item {
   background-color: #ffffed;
 }
 
 .accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed {
   border-radius: 5rem;
-  background-color: rgba(135, 97, 255, 0.1);
+  background-color: rgba(255, 255, 237, 0.6);
   color: #000;
   outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-color: #000;
 }
 .accordion-flush .accordion-item .accordion-button .accordion-button, .accordion-flush .accordion-item .accordion-button .accordion-button:focus, .accordion-flush .accordion-item .accordion-button button:focus:not(:focus-visible), .accordion-flush .accordion-item .accordion-button.collapsed .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed .accordion-button:focus, .accordion-flush .accordion-item .accordion-button.collapsed button:focus:not(:focus-visible) {
   outline: none;
@@ -300,7 +332,7 @@ hr {
 }
 
 .footer {
-  padding: 1rem;
+  padding: 2rem;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -311,6 +343,7 @@ hr {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background-color: #ffffed;
 }
 .footer__link {
   color: #000;
