--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -25,11 +25,12 @@ body
 	overflow-y: hidden
 
 section
-	margin: 5rem
+	margin: 4rem auto
 
 .title
-	margin-bottom: 2rem
+	margin: 2rem auto
 	font-size: 4rem
+	text-align: center
 	&__link
 		display: inline-block
 		margin: 0 2rem 2rem 2rem
@@ -44,13 +45,10 @@ section
 
 .txt
 	margin: 1rem 0 4rem 1rem
-	line-height: 2.8rem
-	font-size: 1.6rem
+	line-height: 2.4rem
+	font-size: 1.7rem
 	color: $txt-gray
-
-.title__right-block
-	text-align: center
-	font-size: 3rem
+	white-space: pre-wrap
 
 
 a, a:focus, a:visited, a:hover
@@ -65,7 +63,6 @@ hr
 	margin: 0 auto
 #hr__down
 		width: 83%
-
 .fi
 	display: inline-block
 	margin-top: 0.5rem
@@ -81,28 +78,7 @@ hr
 		&-instagram
 			&:hover
 				color: #D980FA
-
-.right-img
-	width: 100%
-	max-height: 25rem
-	object-fit: cover
-	border-radius: 3rem
-
-// Header
-.header 
-	display: flex
-	align-items: center
-
-.logo
-	&-img 
-		width: 8rem
-
-.social
-	display: flex
-	align-items: center
-	justify-content: space-between
-	height: 100%
-	&-link
+.main-link
 		position: relative
 		color: $txt
 		font-size: 1.6rem
@@ -112,7 +88,6 @@ hr
 		&:hover
 			color: $color-btn
 			text-shadow: 0 0 1.5rem $color-btn
-
 		&_active
 			color: $color-btn
 			&::after
@@ -125,23 +100,48 @@ hr
 				right: 50%
 				transform: translateX(50%)
 				box-shadow: 0 -3px 7px $color-btn
-
-	&__btn
+.main-btn
 		border: 2px solid #000
-		padding: 0.1rem 2rem
 		border-radius: 3rem
 		transition: all 0.4s
 		&:hover
 			color: $milk
 			background-color: $color-btn
 			border: 2px solid $color-btn
+.side-bar
+	position: fixed
+	margin-top: 5rem
+	padding: 1rem
+	border-top: 1px solid rgba($color-btn, 0.3)
+	border-right: 1px solid rgba($color-btn, 0.3)
+	border-top-right-radius: 5rem
+	.main-link
+		&::after
+			bottom: -0.5rem
+.video
+	border-radius: 5rem
+	width: 100%
+
+// Header
+.header 
+	display: flex
+	align-items: center
+.logo
+	&__img 
+		width: 8rem
+.social
+	display: flex
+	align-items: center
+	justify-content: space-between
+	height: 100%
+	&__btn
+		padding: 0.1rem 2rem
 .nav-list
 	display: flex
 	justify-content: space-around
 	text-align: center
 	margin-top: 1rem
 	&-item
-
 // Главная
 .main
 	&-wrapper
@@ -157,72 +157,75 @@ hr
 	text-align: center
 	font-size: 2.6rem
 	&-logo
-		&-img
+		&__img
 			width: 50rem
 	
 // О нас
 .about
-	&-title
-		text-align: center
+	&::after
+		content: ''
+		background: url(../img/logo.png) no-repeat bottom right / cover
+		position: absolute
+		height: 50rem
+		width: 50rem
+		left: 75rem
+		top: 30rem
+		opacity: 0.4
+		z-index: -1
+	&__sub-title
+		font-size: 2rem
 	&__list
 		width: 70%
 		margin-left: 3rem
-
-	&__title
-		font-size: 3rem
-
 	&__item
-		font-size: 1.8rem
+		font-size: 1.7rem
 		margin: 1rem auto
 
 // Услуги
 .services
 	&-list
-		border: 2px solid $color-btn
-		border-radius: 3rem
-		position: fixed
+		
 		&-item
-			margin: 3rem
+			margin: 2rem
 			margin-left: -1rem
-		&__link
-			font-size: 2rem
-
-
-
+	&__link
+		font-size: 1.8rem
+	&__img
+		width: 100%
+		max-height: 25rem
+		object-fit: cover
+		border-radius: 3rem
 
 // Contacts
 .contacts
 	&__title
 		font-size: 2rem
 		margin: 3rem auto 2rem
-
 	&-block
 		display: flex
 		justify-content: space-around
 		align-items: center
 		margin-top: 2rem
-
 	&__btn
 		display: inline-block
 		margin-top: 2.5rem
 		padding: 1rem 1.6rem
-
-.social-link_contacts
+.main-link_contacts
 	.fi
 		font-size: 4rem
-
-
 .map
 	position: absolute
 	right: 0
-	top: 17rem
+	top: 13rem
 	background-color: #ccc
 	width: 48%
-	height: 60%
+	height: 42rem
 	iframe
 		width: 100%
 		height: 100%
 
+.popup-btn
+	cursor: pointer
 
 // Секция инфо
 .info
@@ -237,31 +240,33 @@ hr
 		&-header
 			padding-left: 3rem
 			font-size: 2rem
-			background: $milk
+			background-color: $milk
 			border: 2px double $txt-gray
 		&-body
 			margin: 0
+			font-size: 1.8rem
 			background-color: $milk
-
-
+.accordion-item
+			background-color: $milk
 .accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed
 		border-radius: 5rem
-		background-color: rgba($color-btn, 0.1)
+		background-color: rgba($milk, 0.6)
 		color: $txt
 		outline: none
+		box-shadow: none
+		border-color: #000
 		.accordion-button, .accordion-button:focus, button:focus:not(:focus-visible)
 			outline: none
 			border: none
 
-
-
 // Футер
 .footer 
-	padding: 1rem
+	padding: 2rem
 	position: relative
 	display: flex
 	align-items: center
 	justify-content: center
+	background-color: $milk
 	&__link
 		color: $txt
 		transition: all 0.3s
