--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -211,14 +211,17 @@ hr {
   width: 50rem;
 }
 
+.about {
+  position: relative;
+}
 .about::after {
   content: "";
   background: url(../img/logo.png) no-repeat bottom right/cover;
   position: absolute;
-  height: 50rem;
-  width: 50rem;
-  left: 75rem;
-  top: 30rem;
+  height: 45rem;
+  width: 45rem;
+  right: 0;
+  bottom: -2rem;
   opacity: 0.4;
   z-index: -1;
 }
@@ -250,7 +253,6 @@ hr {
 }
 
 .contacts__title {
-  font-size: 2rem;
   margin: 3rem auto 2rem;
 }
 .contacts-block {
@@ -292,6 +294,7 @@ hr {
 }
 
 .info__list-item {
+  font-size: 1.8rem;
   margin: 1rem auto;
 }
 .info__accordion {
