--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -166,14 +166,15 @@ hr
 	
 // О нас
 .about
+	position: relative
 	&::after
 		content: ''
 		background: url(../img/logo.png) no-repeat bottom right / cover
 		position: absolute
-		height: 50rem
-		width: 50rem
-		left: 75rem
-		top: 30rem
+		height: 45rem
+		width: 45rem
+		right: 0
+		bottom: -2rem
 		opacity: 0.4
 		z-index: -1
 	&__sub-title
@@ -189,7 +190,6 @@ hr
 // Услуги
 .services
 	&-list
-		
 		&-item
 			margin: 2rem
 			margin-left: -1rem
@@ -204,7 +204,6 @@ hr
 // Contacts
 .contacts
 	&__title
-		font-size: 2rem
 		margin: 3rem auto 2rem
 	&-block
 		display: flex
@@ -235,6 +234,7 @@ hr
 // Секция инфо
 .info
 	&__list-item
+		font-size: 1.8rem
 		margin: 1rem auto
 	// accardion
 	&__accordion
